[package]
name = "orbit-recon"
version = "0.1.0"
edition = "2021"
description = "Automated codebase health analysis using GitLab Orbit Knowledge Graph"
license = "MIT"
readme = "README.md"
keywords = ["gitlab", "orbit", "knowledge-graph", "code-health", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/icohangar-ops/orbit-recon"

[dependencies]
duckdb = { version = "1.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
colored = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
glob = "0.3"
regex = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "orbit-recon"
path = "src/main.rs"